added code to HTML file

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -12,7 +12,49 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>Enter your HTML notes here</li>
+          <li>The head element contains information about the webpage.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>The head element is not visible to the client or user</li>
+          <li>The body element uses h1, h2, h3... h6, to identify specific headers in the body or on the webpage</li>
+          <li>HTML acts as the metaphorical frame or foundation of the code</li>
+          <li>It's best to save and test code as often as possible to make sure there are no errors</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>CSS acts as the metaphorical physical style elements of the code when viewed in a web browser such as google </li>
+          <li>When you open a live webpage in google you can use the inspect element tool to inspect the different elements of the html and css code</li>
+          <li>Can help you understand the viewport; what the website will look like on different devieces and aspect ratios</li>
+          <li>Can help to dictate what certain text will do when webpage is shrunken and expanded, shows how to wrap text, what the website should do for certain triggers</li>
+        </ul>
+   
+      </section>
+   
+      <section class="card" id="git-section">
+        <h3>Git</h3>
+        <ul>
+          <li>Git is the online cloud based repository that you push and pull your code from</li>
+          <li>You can work on code independent from others when you use a branch so that you dont caue conflict with the main branch</li>
+          <li>you can send stored code to and inspector before pulling it down into the main branch</li>
+          <li>It is important to pull all changes in first before doing any work so that you can stay up to date and code won't conflict</li>
+          <li>git status: checks what branch we are currently on</li>
+    <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+        </ul>
+   
+      </section>
+   
+      <section class="card" id="javascript-section">
+   <h4>Java</h4>
+        <ul>
+    <li>Honestly I dont know a thing about java</li>
+   </ul>
+      </section>
     </main>
 
     <footer>
