added CSS to project

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -31,6 +32,12 @@
           <li>When you open a live webpage in google you can use the inspect element tool to inspect the different elements of the html and css code</li>
           <li>Can help you understand the viewport; what the website will look like on different devieces and aspect ratios</li>
           <li>Can help to dictate what certain text will do when webpage is shrunken and expanded, shows how to wrap text, what the website should do for certain triggers</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>When you list dimensions its going to apply to the X and Y axes respectively</li>
+          <li>You can use hex codes or just use namming semantics to get a desired or specific colour</li>
+          <li>Remember to link all your style sheets with your html in the header but at the very bottom of all the meta</li>
+          <li>if you specify your classes and your ids, you can manipulate them all at the same time in your style css</li>
         </ul>
    
       </section>
@@ -43,13 +50,13 @@
           <li>you can send stored code to and inspector before pulling it down into the main branch</li>
           <li>It is important to pull all changes in first before doing any work so that you can stay up to date and code won't conflict</li>
           <li>git status: checks what branch we are currently on</li>
-    <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
         </ul>
    
       </section>
    
       <section class="card" id="javascript-section">
-   <h4>Java</h4>
+      <h4>Java</h4>
         <ul>
     <li>Honestly I dont know a thing about java</li>
    </ul>
