--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -11,6 +11,7 @@
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <section class="card" id="html-section">
@@ -58,7 +59,7 @@
       <section class="card" id="javascript-section">
       <h4>Java</h4>
         <ul>
-    <li>Honestly I dont know a thing about java</li>
+    <li>Each line of Java code ends with a semicolon which is this thingy --> ;</li>
    </ul>
       </section>
     </main>
@@ -66,5 +67,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
