--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -60,6 +60,8 @@
       <h4>Java</h4>
         <ul>
     <li>Each line of Java code ends with a semicolon which is this thingy --> ;</li>
+      <li>A variable is a named container that allows us to store data in our code.</li>
+      <li>Control flow is the order in which a computer executes code in a script.</li>
    </ul>
       </section>
     </main>
